gui/surface.h

/* Graphics surface (or animation) */
typedef struct ag_surface {
	AG_PixelFormat format;		/* Pixel format */
	Uint flags;
#define AG_SURFACE_COLORKEY	0x01	/* Enable color key for blit as src */
#define AG_SURFACE_ALPHA	0x02	/* Enable alpha for blit as src */
#define AG_SURFACE_GL_TEXTURE	0x04	/* Use directly as OpenGL texture */
#define AG_SURFACE_MAPPED	0x08	/* Disallow AG_SurfaceFree() */
#define AG_SURFACE_STATIC	0x10	/* Don't free() in AG_SurfaceFree() */
#define AG_SURFACE_EXT_PIXELS	0x20	/* Pixels are allocated externally */
#define AG_SURFACE_ANIMATED	0x40	/* Is an animation */
#define AG_SURFACE_TRACE	0x80	/* Enable debugging */
#define AG_SAVED_SURFACE_FLAGS	(AG_SURFACE_COLORKEY | AG_SURFACE_ALPHA | \
                                 AG_SURFACE_ANIMATED)
	Uint w, h;			/* Size in pixels */
	Uint pitch;			/* Scanline byte length */
	Uint8 *_Nullable pixels;	/* Raw pixel data */
	AG_Rect clipRect;		/* Clipping rect for blit as dst */
	AG_AnimFrame *_Nullable frames;	/* Animation frames */
	Uint n;				/* Animation frame count */
	Uint padding;			/* Scanline end padding */
	AG_Pixel colorkey;		/* Color key pixel */
	AG_Component alpha;		/* Per-surface alpha */
#if AG_MODEL == AG_LARGE
	Uint8 _pad[6];
#elif AG_MODEL == AG_MEDIUM
	Uint8 _pad[3];
#else
	Uint8 _pad[7];
#endif
} AG_Surface;
AG_Surface *_Nonnull AG_SurfaceEmpty(void)
                                    _Warn_Unused_Result;
void AG_SurfaceCopy(AG_Surface *_Nonnull, const AG_Surface *_Nonnull);
void AG_SurfaceFree(AG_Surface *_Nonnull);
AG_Surface *_Nonnull AG_SurfaceFromSDL(void *_Nonnull)
                                      _Warn_Unused_Result;